# gnuhealth

./: .hgignore  README  README.rst
tryton/: Changelog  Makefile.in  README  configure  configure.ac  gnuhealth-control  gnuhealth-setup  gnuhealth-update  gnuhealth_install.sh  gnuhealthrc  install.sh  start_gnuhealth.sh  version
tryton/.reuse/: dep5
tryton/config/: gnuhealth_log.conf  trytond.conf
tryton/demo/: boy_names  girl_names  gnuhealth_demo_server.py  health_demo_server.py  parties.csv
tryton/doc/: README  gnuhealth-hmis.rst
tryton/health/: MANIFEST.in  README  __init__.py  __tryton__.py  core.py  es_ES.csv  exceptions.py  health.py  health_report.xml  health_view.xml  sequences.py  setup.py  tryton.cfg
tryton/health_ambulance/: __init__.py  health_ambulance.py  health_ambulance_view.xml  setup.py  tryton.cfg
tryton/health_archives/: README  __init__.py  health_archives.py  health_archives_view.xml  setup.py  tryton.cfg
tryton/health_caldav/: COPYRIGHT  Changelog  MANIFEST.in  README  __init__.py  caldav.py  calendar.xml  calendar_.py  exceptions.py  res.py  setup.py  tryton.cfg  webdav.py
tryton/health_calendar/: MANIFEST.in  README  __init__.py  __tryton__.py  es_ES.csv  exceptions.py  health_calendar.py  health_calendar_view.xml  setup.py  tryton.cfg
tryton/health_contact_tracing/: __init__.py  health_contact_tracing.py  health_contact_tracing_view.xml  setup.py  tryton.cfg
tryton/health_crypto/: README  __init__.py  health_crypto.py  health_crypto_view.xml  setup.py  tryton.cfg
tryton/health_crypto_lab/: __init__.py  setup.py  (+3 more)
(+2484 files in other folders)
